# toolkit_minecraft_modding

./: Makefile  README.md  README_DEPLOY.md  config.json  fishNames.txt  fishOutput.java  generate_item_entries.py  generate_lang_entries.py  package_toolkit.py  pyproject.toml  toolkit_cli.py  toolkit_config.json
src/net/reconhalcyon/toolkit/: config.py  config_loader.py  logger.py  utils.py
src/net/reconhalcyon/toolkit/commands/: tachikoma.py
src/net/reconhalcyon/toolkit/generators/: item_entries.py  lang_entries.py
version_templates/1.21.1/: item_entry.j2  moditems_entry.j2
